fix layout bug in pre blocks

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -18,7 +18,6 @@ body {
 
 main {
   isolation: isolate;
-  margin-inline: auto;
   padding-inline: var(--space-l);
   position: relative;
 }
@@ -95,7 +94,10 @@ code:not(pre code) {
 pre {
   border-radius: 4px;
   padding: var(--space-m);
+  inline-size: 100%;
+  white-space: pre-wrap;
 }
+
 
 td, th {
   border-bottom: 1px solid var(--color-gray-dark);
